syntax = "proto3";

package market;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/blackhorseya/monorepo-go/entity/domain/market/model";

message MarketInfo {
    // @gotags: bson:"_id"
    string type = 1;
    string name = 2;
    // @gotags: swaggertype:"string"
    google.protobuf.Timestamp queried_at = 3;
    bool is_trade_day = 4;
    bool is_opening = 5;
}

message StockInfo {
    // @gotags: bson:"_id"
    string symbol = 1;
    string name = 2;
    string industry_category = 3;
    string type = 4;
    // @gotags: swaggertype:"string"
    google.protobuf.Timestamp date = 5;
}

message Stock {
    // @gotags bson:"_id"
    string symbol = 1;
    string name = 2;
    double price = 3;
    DailyQuote daily_quote = 4;
}

message DailyQuote {
    double open = 1;
    double high = 2;
    double low = 3;
    double close = 4;
    int64 volume = 5;
    int64 value = 6;
    double change = 7;
    int64 transaction = 8;
    // @gotags: swaggertype:"string"
    google.protobuf.Timestamp date = 9;
}
